[gd_scene load_steps=7 format=3 uid="uid://b8qt6cqjoa5an"]

[ext_resource type="Texture2D" uid="uid://b4sw8om17636k" path="res://flappy-bird-assets/sprites/pipe-green.png" id="1_2g0c4"]
[ext_resource type="Script" path="res://pipe.gd" id="1_vvu2j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_leytm"]
size = Vector2(64, 416)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_457vl"]
size = Vector2(64, 416)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_k6ox6"]
b = Vector2(-584, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_2f8p8"]
a = Vector2(0, 184)

[node name="Pipe" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_vvu2j")

[node name="PipeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeArea"]
position = Vector2(1.90735e-05, -44)
shape = SubResource("RectangleShape2D_leytm")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PipeArea"]
position = Vector2(1.90735e-05, 524)
shape = SubResource("RectangleShape2D_457vl")

[node name="Pipe-green" type="Sprite2D" parent="PipeArea"]
position = Vector2(1.90735e-05, -44)
scale = Vector2(1.23077, 1.3)
texture = ExtResource("1_2g0c4")
flip_v = true

[node name="Pipe-green2" type="Sprite2D" parent="PipeArea"]
position = Vector2(1.90735e-05, 524)
scale = Vector2(1.23077, 1.3)
texture = ExtResource("1_2g0c4")

[node name="Ceiling" type="CollisionShape2D" parent="PipeArea"]
position = Vector2(260, -4)
shape = SubResource("SegmentShape2D_k6ox6")

[node name="Pass" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pass"]
position = Vector2(16, 152)
shape = SubResource("SegmentShape2D_2f8p8")

[connection signal="body_entered" from="PipeArea" to="." method="_on_pipe_area_body_entered"]
[connection signal="body_entered" from="Pass" to="." method="_on_pass_body_entered"]
